--- a/dietersDilemmaBelief.html
+++ b/dietersDilemmaBelief.html
@@ -1255,6 +1255,7 @@
             pie1Values: newResponses.map(r => r.pie1Value),
             pie2Values: newResponses.map(r => r.pie2Value),
             verbalValues: newResponses.map(r => r.verbalValue),
+            beliefs: newResponses.map(r => r.verbalValue),
             increasingOrder: CONFIG.increasingOrder
           });
 
