--- a/additionalQuestions.html
+++ b/additionalQuestions.html
@@ -242,15 +242,15 @@
       const page1Questions = [
         {
           key: 'q1',
-          text: `How often did <strong>you drink ${CONFIG.playerName0}</strong> ${CONFIG.playerIcon0}? <span style="color: #64748b; font-style: italic;">(what percentage of the weeks)</span>`
+          text: `How often did <strong>you drink ${CONFIG.playerName0}</strong> ${CONFIG.playerIcon0} <span style="color: #64748b; font-style: italic;">(what percentage of the weeks)</span>?`
         },
         {
           key: 'q2',
-          text: `How often was your <strong>${CONFIG.playerName1}</strong> level normal? <span style="color: #64748b; font-style: italic;">(what percentage of the weeks)</span>`
+          text: `How often was your <strong>${CONFIG.playerName1}</strong> level normal <span style="color: #64748b; font-style: italic;">(what percentage of the weeks)</span>?`
         },
         {
           key: 'q3',
-          text: `How often did you feel <strong>${CONFIG.playerName2Pos}</strong>? <span style="color: #64748b; font-style: italic;">(what percentage of the weeks)</span>`
+          text: `How often did you feel <strong>${CONFIG.playerName2Pos}</strong> <span style="color: #64748b; font-style: italic;">(what percentage of the weeks)</span>?`
         }
       ];
 
