--- a/dieterInstructions.html
+++ b/dieterInstructions.html
@@ -87,7 +87,7 @@
     // Example drink-chemical pairs for illustration
     const EXAMPLES = [
       { drink: 'Driftwell', chemical: 'Qivaryn', icon: '🥤' },
-      { drink: 'Clearhaven', chemical: 'Zerqalase', icon: '🧋' },
+      { drink: 'Clearhaven', chemical: 'Zerqalase', icon: '🍵' },
       { drink: 'Melloway', chemical: 'Melythor', icon: '🍶' }
     ];
   </script>
